fix: Fixed navbar responsiveness and button gaps

--- a/ULearn/src/components/Nav/Nav.css
+++ b/ULearn/src/components/Nav/Nav.css
@@ -4,10 +4,11 @@
     border-bottom: 2px solid #f3f3f3;
     justify-content: space-between; /* Changed from space-around to space-between */
     align-items: center;
-    padding: 20px;
     z-index: 999;
-    margin-left: 2rem;
+    padding: 20px;
     height: 60px;
+    width: 100vw;
+    max-width: 100%;
 }
 
 .tutor-search-input {
@@ -24,15 +25,10 @@
 .profile-container {
     display: flex;
     align-items: center;
-    margin-left: auto; /* Added to push the container to the right */
+    gap: 20px;
 }
 
 .nav-icons {
-    width: 3rem;
+    width: 2rem;
     height: 2rem;
-    margin-left: 1rem;
-}
-.nav-user-button {
-    margin-left: 77%;
-    margin-top: 0.5%;
 }
